<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up_activity"
    android:id="@+id/relativeLayout">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/dob_signUp"
        app:layout_constraintBottom_toTopOf="@+id/etConfirmPasswordLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_et"
            android:inputType="textPassword" />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/etConfirmPasswordLayout"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="162dp"
        android:orientation="vertical"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/signUp_username_et"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/signUp_username_et">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword_signUp"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/signUp_lName_et"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/lastName_signUp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signUp_username_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dob_signUp"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateOfBirth_signUp"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/email_signUp_et"
        app:layout_constraintStart_toStartOf="@+id/email_signUp_et"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/email_signUp_et"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginTop="198dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/dob_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/signUp_username_et"
        app:layout_constraintStart_toStartOf="@+id/signUp_username_et"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/signUp_username_et"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="118dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="118dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="143dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/username_signUp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/email_signUp_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Image_fab"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/white"
        app:elevation="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/signUp_lName_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/black"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/user_agreement_tv"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:text="@string/user_agreement_signUp"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/user_agreement_signUp" />

    <Button
        android:id="@+id/button_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="100dp"
        android:text="@string/signUp_button"
        android:layout_marginLeft="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/hasAccount_tv"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/already_has_account_SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/Image_fab"
        app:layout_constraintStart_toStartOf="@+id/Image_fab" />

    <TextView
        android:id="@+id/signInLink_tv"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="@string/already_signIn_button"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hasAccount_tv" />

    <AutoCompleteTextView
        android:id="@+id/signUp_fName_actv"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="29dp"
        android:hint="@string/first_name_signUp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_lName_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/chooseProfilePicture"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_username_et"
        app:layout_constraintEnd_toStartOf="@+id/signUp_lName_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>