<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tv_mainHeader2"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_marginBottom="89dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/main_header"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordQuestion_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="45sp" />

    <TextView
        android:id="@+id/forgotPasswordQuestion_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginStart="66dp"
        android:text="@string/forgot_pw_question"
        app:layout_constraintBottom_toTopOf="@+id/forgotPwEmail_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainHeader2" />

    <EditText
        android:id="@+id/forgotPwEmail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/reset_btn"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordQuestion_tv"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordQuestion_tv" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:text="@string/resetButton"
        app:layout_constraintBottom_toTopOf="@+id/signInLink_tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwEmail_tv" />

    <TextView
        android:id="@+id/hasAccount_tv2"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="66dp"
        android:text="@string/already_has_account_SignUp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signInLink_tv2"
        app:layout_constraintEnd_toStartOf="@+id/signInLink_tv2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInLink_tv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="98dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/already_signIn_button"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hasAccount_tv2"
        app:layout_constraintTop_toBottomOf="@+id/reset_btn" />

</android.support.constraint.ConstraintLayout>